--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 
 Term1/LaneLines/writeup_template\.md
+
+Term0/P2-Implement-Matrix-Class/\.ipynb_checkpoints/
+
+Term0/P2-Implement-Matrix-Class/__pycache__/
+
+Term0/P2-Implement-Matrix-Class/\.idea/
